# corruption

./: .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
admin_bot/: main.py  worker.py
admin_bot/handlers/: admin.py
alembic/: env.py
alembic/versions/: 3f65eb8d7214_initial.py  bdc42544909c_add_media_type_to_reports.py
client_bot/: main.py  tasks.py
client_bot/handlers/: report.py
shared/: celery_app.py  config.py  database.py  models.py
