[project]
name = "corruption"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "redis>=6.4.0",
    "sqlalchemy[asyncio]>=2.0.51",
]
